; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_hal_com.c_Hal_MappingOutPipe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_hal_com.c_Hal_MappingOutPipe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { %struct.registry_priv }
%struct.registry_priv = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Hal_MappingOutPipe(%struct.adapter* %0, i32 %1) #0 {
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.registry_priv*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.adapter*, %struct.adapter** %3, align 8
  %9 = getelementptr inbounds %struct.adapter, %struct.adapter* %8, i32 0, i32 0
  store %struct.registry_priv* %9, %struct.registry_priv** %5, align 8
  %10 = load %struct.registry_priv*, %struct.registry_priv** %5, align 8
  %11 = getelementptr inbounds %struct.registry_priv, %struct.registry_priv* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 1, i32 0
  store i32 %15, i32* %6, align 4
  store i32 1, i32* %7, align 4
  %16 = load i32, i32* %4, align 4
  switch i32 %16, label %28 [
    i32 2, label %17
    i32 3, label %21
    i32 4, label %21
    i32 1, label %25
  ]

17:                                               ; preds = %2
  %18 = load %struct.adapter*, %struct.adapter** %3, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @_TwoOutPipeMapping(%struct.adapter* %18, i32 %19)
  br label %29

21:                                               ; preds = %2, %2
  %22 = load %struct.adapter*, %struct.adapter** %3, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @_ThreeOutPipeMapping(%struct.adapter* %22, i32 %23)
  br label %29

25:                                               ; preds = %2
  %26 = load %struct.adapter*, %struct.adapter** %3, align 8
  %27 = call i32 @_OneOutPipeMapping(%struct.adapter* %26)
  br label %29

28:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  br label %29

29:                                               ; preds = %28, %25, %21, %17
  %30 = load i32, i32* %7, align 4
  ret i32 %30
}

declare dso_local i32 @_TwoOutPipeMapping(%struct.adapter*, i32) #1

declare dso_local i32 @_ThreeOutPipeMapping(%struct.adapter*, i32) #1

declare dso_local i32 @_OneOutPipeMapping(%struct.adapter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
